Fix weird knockback and incorrect Iframe